--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/scottosan/recipe-keeper/issues"
   },
-  "homepage": "https://github.com/scottosan/recipe-keeper#readme"
+  "homepage": "https://github.com/scottosan/recipe-keeper#readme",
+  "dependencies": {
+    "express": "^4.16.4",
+    "react": "^16.7.0"
+  }
 }
