--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   "homepage": "https://github.com/scottosan/recipe-keeper#readme",
   "dependencies": {
     "express": "^4.16.4",
-    "react": "^16.7.0"
+    "express-react-views": "^0.11.0",
+    "jsonfile": "^5.0.0",
+    "method-override": "^3.0.0",
+    "nodemon": "^1.18.9",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
   }
 }
