--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "express-react-views": "^0.11.0",
+    "jsonfile": "^5.0.0",
     "method-override": "^3.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
