--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-react-views": "^0.11.0",
     "jsonfile": "^5.0.0",
     "method-override": "^3.0.0",
+    "pretty": "^2.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
