--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "recipe-keeper",
   "version": "1.0.0",
   "description": "Create an online recipe keeper.",
-  "main": "index.js",
+  "main": "index-ver-2.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
