--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonfile": "^5.0.0",
     "method-override": "^3.0.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "uniqid": "^5.0.3"
   }
 }
