--- a/views/package.json
+++ b/views/package.json
@@ -1,7 +1,6 @@
 {
   "name": "recipekeeper",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -16,5 +15,7 @@
     "method-override": "^3.0.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
