--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonfile": "^5.0.0",
     "method-override": "^3.0.0",
     "react": "^16.10.2",
-    "react-dom": "^16.10.2"
+    "react-dom": "^16.10.2",
+    "uuidv4": "^5.0.1"
   }
 }
