--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "express-react-views": "^0.11.0",
     "jsonfile": "^5.0.0",
+    "method-override": "^3.0.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2"
   },
