Added node packages

--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/LaustinSpayce/recipe-keeper/issues"
   },
-  "homepage": "https://github.com/LaustinSpayce/recipe-keeper#readme"
+  "homepage": "https://github.com/LaustinSpayce/recipe-keeper#readme",
+  "dependencies": {
+    "express-react-views": "^0.11.0",
+    "jsonfile": "^5.0.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-express": "^0.2.0"
+  }
 }
