--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express-react-views": "^0.11.0",
     "jsonfile": "^5.0.0",
+    "method-override": "^3.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-express": "^0.2.0"
