--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/LaustinSpayce/recipe-keeper#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "express-react-views": "^0.11.0",
     "jsonfile": "^5.0.0",
     "method-override": "^3.0.0",
