--- a/package.json
+++ b/package.json
@@ -17,14 +17,11 @@
   },
   "homepage": "https://github.com/benjacoblee/recipe-keeper#readme",
   "dependencies": {
-    "css-loader": "^3.4.2",
     "express": "^4.17.1",
     "express-react-views": "^0.11.0",
     "jsonfile": "^5.0.0",
-    "mdbreact": "^4.24.0",
     "method-override": "^3.0.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "style-loader": "^1.1.3"
+    "react-dom": "^16.12.0"
   }
 }
