--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-react-views": "^0.11.0",
     "jsonfile": "^5.0.0",
     "method-override": "^3.0.0",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   }
