--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Create an online recipe keeper.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -23,5 +24,9 @@
     "jsonfile": "^5.0.0",
     "method-override": "^3.0.0",
     "react-dom": "^16.12.0"
+  },
+  "devDependencies": {
+    "css-loader": "^3.4.2",
+    "webpack": "^4.41.5"
   }
 }
