--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonfile": "^6.0.1",
     "method-override": "^3.0.0",
     "nodemon": "^2.0.3",
+    "popups": "^1.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
