View recipe page added

--- a/.gitignore
+++ b/.gitignore
@@ -5070,3 +5070,6 @@ node_modules/yallist/LICENSE
 node_modules/yallist/package.json
 node_modules/yallist/README.md
 node_modules/yallist/yallist.js
+node_modules/.cache/@babel/register/.babel.7.9.0.development.json
+node_modules/.cache/@babel/register/.babel.7.9.0.development.json
+node_modules/.cache/@babel/register/.babel.7.9.0.development.json
