--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "a simple crud app",
   "main": "index.js",
   "scripts": {
+    "start": "node ./server.js",
+    "dev": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +17,19 @@
   "bugs": {
     "url": "https://github.com/dev-seahouse/recipe-keeper/issues"
   },
-  "homepage": "https://github.com/dev-seahouse/recipe-keeper#readme"
+  "homepage": "https://github.com/dev-seahouse/recipe-keeper#readme",
+  "dependencies": {
+    "@react-ssr/core": "latest",
+    "@react-ssr/express": "latest",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jsonfile": "^6.0.1",
+    "method-override": "^3.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "shortid": "^2.2.15"
+  },
+  "devDependencies": {
+    "bulma": "^0.8.2"
+  }
 }
