--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Rachelik/recipe-keeper#readme",
   "dependencies": {
+    "dateformat": "^3.0.3",
     "express": "^4.17.1",
     "express-react-views": "^0.11.0",
     "jsonfile": "^6.0.1",
