--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "method-override": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-multi-select-component": "^2.0.1",
     "shortid": "^2.2.15"
   },
   "devDependencies": {
